# project-life-track

app_life_track/: READ.me  README.md  pubspec.yaml
app_life_track/ios/: ExportOptions-dev.plist  ExportOptions.plist
app_life_track/lib/: global_variable.dart  main.dart
app_life_track/linux/: CMakeLists.txt
app_life_track/test/: widget_test.dart
be_life_track/: .env  .pre-commit-config.yaml  Dockerfile  Makefile  app_db.sql  deploy-backend.yaml  docker-compose.yml  pyproject.toml
be_life_track/api/: main.py
be_life_track/api/dependencies/: auth.py
be_life_track/api/middlewares/: exception_handler.py
be_life_track/api/routes/: auth.py  biomarker.py  health.py  user.py
be_life_track/api/schemas/: auth.py  biomarker.py  response.py
be_life_track/api/utils/: response.py
be_life_track/core/: config.py  logging.py  security.py
be_life_track/core/constants/: kakao.py
be_life_track/db/: session.py
be_life_track/models/: __init__.py  admin.py  allergy.py  biomarker_log.py  care_card.py  care_log.py  disease.py  food_preference.py  group.py  institution.py  library_content.py  medication_log.py  medication_log_standalone.py  medication_plan.py  report.py  report_monitoring.py  report_user_app.py  risk.py  user.py  user_allergy.py  user_care_card.py  user_care_manager.py  user_disease.py  user_food_preference.py  user_group.py  user_health_info.py
be_life_track/services/: biomarker_service.py
be_life_track/services/auth/: kakao_service.py
web_life_track_admin/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+144 files in other folders)
